parser/DrawerParser.py
# Generated from Drawer.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class DrawerParser ( Parser ):

    grammarFileName = "Drawer.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "';'", "'origin'", "'is'", "'('", "','", 
                     "')'", "'rot'", "'scale'", "'color'", "'for'", "'from'", 
                     "'to'", "'step'", "'draw'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "SIG", "OP1", 
                      "OP2", "ID", "NUM", "WS", "COM" ]

    RULE_prog = 0
    RULE_stat = 1
    RULE_originStat = 2
    RULE_rotStat = 3
    RULE_scaleStat = 4
    RULE_colorStat = 5
    RULE_forStat = 6
    RULE_drawStat = 7
    RULE_value = 8
    RULE_expr = 9
    RULE_nopExpr = 10
    RULE_valueExpr = 11
    RULE_wrappedExpr = 12
    RULE_funcCallExpr = 13
    RULE_sigExpr = 14
    RULE_op1Expr = 15
    RULE_op2Expr = 16

    ruleNames =  [ "prog", "stat", "originStat", "rotStat", "scaleStat", 
                   "colorStat", "forStat", "drawStat", "value", "expr", 
                   "nopExpr", "valueExpr", "wrappedExpr", "funcCallExpr", 
                   "sigExpr", "op1Expr", "op2Expr" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    SIG=15
    OP1=16
    OP2=17
    ID=18
    NUM=19
    WS=20
    COM=21

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stat(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DrawerParser.StatContext)
            else:
                return self.getTypedRuleContext(DrawerParser.StatContext,i)


        def getRuleIndex(self):
            return DrawerParser.RULE_prog

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProg" ):
                listener.enterProg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProg" ):
                listener.exitProg(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProg" ):
                return visitor.visitProg(self)
            else:
                return visitor.visitChildren(self)




    def prog(self):

        localctx = DrawerParser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_prog)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 39
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 20356) != 0):
                self.state = 34
                self.stat()
                self.state = 35
                self.match(DrawerParser.T__0)
                self.state = 41
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def originStat(self):
            return self.getTypedRuleContext(DrawerParser.OriginStatContext,0)


        def rotStat(self):
            return self.getTypedRuleContext(DrawerParser.RotStatContext,0)


        def scaleStat(self):
            return self.getTypedRuleContext(DrawerParser.ScaleStatContext,0)


        def colorStat(self):
            return self.getTypedRuleContext(DrawerParser.ColorStatContext,0)


        def forStat(self):
            return self.getTypedRuleContext(DrawerParser.ForStatContext,0)


        def drawStat(self):
            return self.getTypedRuleContext(DrawerParser.DrawStatContext,0)


        def getRuleIndex(self):
            return DrawerParser.RULE_stat

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStat" ):
                listener.enterStat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStat" ):
                listener.exitStat(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStat" ):
                return visitor.visitStat(self)
            else:
                return visitor.visitChildren(self)




    def stat(self):

        localctx = DrawerParser.StatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_stat)
        try:
            self.state = 48
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [2]:
                self.enterOuterAlt(localctx, 1)
                self.state = 42
                self.originStat()
                pass
            elif token in [7]:
                self.enterOuterAlt(localctx, 2)
                self.state = 43
                self.rotStat()
                pass
            elif token in [8]:
                self.enterOuterAlt(localctx, 3)
                self.state = 44
                self.scaleStat()
                pass
            elif token in [9]:
                self.enterOuterAlt(localctx, 4)
                self.state = 45
                self.colorStat()
                pass
            elif token in [10, 11]:
                self.enterOuterAlt(localctx, 5)
                self.state = 46
                self.forStat()
                pass
            elif token in [14]:
                self.enterOuterAlt(localctx, 6)
                self.state = 47
                self.drawStat()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class OriginStatContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUM(self, i:int=None):
            if i is None:
                return self.getTokens(DrawerParser.NUM)
            else:
                return self.getToken(DrawerParser.NUM, i)

        def getRuleIndex(self):
            return DrawerParser.RULE_originStat

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOriginStat" ):
                listener.enterOriginStat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOriginStat" ):
                listener.exitOriginStat(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOriginStat" ):
                return visitor.visitOriginStat(self)
            else:
                return visitor.visitChildren(self)




    def originStat(self):

        localctx = DrawerParser.OriginStatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_originStat)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 50
            self.match(DrawerParser.T__1)
            self.state = 51
            self.match(DrawerParser.T__2)
            self.state = 52
            self.match(DrawerParser.T__3)
            self.state = 53
            self.match(DrawerParser.NUM)
            self.state = 54
            self.match(DrawerParser.T__4)
            self.state = 55
            self.match(DrawerParser.NUM)
            self.state = 56
            self.match(DrawerParser.T__5)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RotStatContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUM(self):
            return self.getToken(DrawerParser.NUM, 0)

        def getRuleIndex(self):
            return DrawerParser.RULE_rotStat

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRotStat" ):
                listener.enterRotStat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRotStat" ):
                listener.exitRotStat(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRotStat" ):
                return visitor.visitRotStat(self)
            else:
                return visitor.visitChildren(self)




    def rotStat(self):

        localctx = DrawerParser.RotStatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_rotStat)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 58
            self.match(DrawerParser.T__6)
            self.state = 59
            self.match(DrawerParser.T__2)
            self.state = 60
            self.match(DrawerParser.NUM)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ScaleStatContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUM(self, i:int=None):
            if i is None:
                return self.getTokens(DrawerParser.NUM)
            else:
                return self.getToken(DrawerParser.NUM, i)

        def getRuleIndex(self):
            return DrawerParser.RULE_scaleStat

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterScaleStat" ):
                listener.enterScaleStat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitScaleStat" ):
                listener.exitScaleStat(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitScaleStat" ):
                return visitor.visitScaleStat(self)
            else:
                return visitor.visitChildren(self)




    def scaleStat(self):

        localctx = DrawerParser.ScaleStatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_scaleStat)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 62
            self.match(DrawerParser.T__7)
            self.state = 63
            self.match(DrawerParser.T__2)
            self.state = 64
            self.match(DrawerParser.T__3)
            self.state = 65
            self.match(DrawerParser.NUM)
            self.state = 66
            self.match(DrawerParser.T__4)
            self.state = 67
            self.match(DrawerParser.NUM)
            self.state = 68
            self.match(DrawerParser.T__5)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ColorStatContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(DrawerParser.ID, 0)

        def getRuleIndex(self):
            return DrawerParser.RULE_colorStat

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterColorStat" ):
                listener.enterColorStat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitColorStat" ):
                listener.exitColorStat(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitColorStat" ):
                return visitor.visitColorStat(self)
            else:
                return visitor.visitChildren(self)




    def colorStat(self):

        localctx = DrawerParser.ColorStatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_colorStat)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 70
            self.match(DrawerParser.T__8)
            self.state = 71
            self.match(DrawerParser.T__2)
            self.state = 72
            self.match(DrawerParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ForStatContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DrawerParser.ExprContext)
            else:
                return self.getTypedRuleContext(DrawerParser.ExprContext,i)


        def ID(self):
            return self.getToken(DrawerParser.ID, 0)

        def getRuleIndex(self):
            return DrawerParser.RULE_forStat

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterForStat" ):
                listener.enterForStat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitForStat" ):
                listener.exitForStat(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitForStat" ):
                return visitor.visitForStat(self)
            else:
                return visitor.visitChildren(self)




    def forStat(self):

        localctx = DrawerParser.ForStatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_forStat)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 76
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==10:
                self.state = 74
                self.match(DrawerParser.T__9)
                self.state = 75
                self.match(DrawerParser.ID)


            self.state = 78
            self.match(DrawerParser.T__10)
            self.state = 79
            self.expr()
            self.state = 80
            self.match(DrawerParser.T__11)
            self.state = 81
            self.expr()
            self.state = 82
            self.match(DrawerParser.T__12)
            self.state = 83
            self.expr()
            self.state = 84
            self.match(DrawerParser.T__13)
            self.state = 85
            self.match(DrawerParser.T__3)
            self.state = 86
            self.expr()
            self.state = 87
            self.match(DrawerParser.T__4)
            self.state = 88
            self.expr()
            self.state = 89
            self.match(DrawerParser.T__5)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DrawStatContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DrawerParser.ExprContext)
            else:
                return self.getTypedRuleContext(DrawerParser.ExprContext,i)


        def getRuleIndex(self):
            return DrawerParser.RULE_drawStat

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDrawStat" ):
                listener.enterDrawStat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDrawStat" ):
                listener.exitDrawStat(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDrawStat" ):
                return visitor.visitDrawStat(self)
            else:
                return visitor.visitChildren(self)




    def drawStat(self):

        localctx = DrawerParser.DrawStatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_drawStat)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 91
            self.match(DrawerParser.T__13)
            self.state = 92
            self.match(DrawerParser.T__3)
            self.state = 93
            self.expr()
            self.state = 94
            self.match(DrawerParser.T__4)
            self.state = 95
            self.expr()
            self.state = 96
            self.match(DrawerParser.T__5)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ValueContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUM(self):
            return self.getToken(DrawerParser.NUM, 0)

        def ID(self):
            return self.getToken(DrawerParser.ID, 0)

        def getRuleIndex(self):
            return DrawerParser.RULE_value

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterValue" ):
                listener.enterValue(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitValue" ):
                listener.exitValue(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitValue" ):
                return visitor.visitValue(self)
            else:
                return visitor.visitChildren(self)




    def value(self):

        localctx = DrawerParser.ValueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_value)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 98
            _la = self._input.LA(1)
            if not(_la==18 or _la==19):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def nopExpr(self):
            return self.getTypedRuleContext(DrawerParser.NopExprContext,0)


        def op1Expr(self):
            return self.getTypedRuleContext(DrawerParser.Op1ExprContext,0)


        def getRuleIndex(self):
            return DrawerParser.RULE_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr" ):
                listener.enterExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr" ):
                listener.exitExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpr" ):
                return visitor.visitExpr(self)
            else:
                return visitor.visitChildren(self)




    def expr(self):

        localctx = DrawerParser.ExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_expr)
        try:
            self.state = 102
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 100
                self.nopExpr()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 101
                self.op1Expr(0)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NopExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def valueExpr(self):
            return self.getTypedRuleContext(DrawerParser.ValueExprContext,0)


        def wrappedExpr(self):
            return self.getTypedRuleContext(DrawerParser.WrappedExprContext,0)


        def funcCallExpr(self):
            return self.getTypedRuleContext(DrawerParser.FuncCallExprContext,0)


        def sigExpr(self):
            return self.getTypedRuleContext(DrawerParser.SigExprContext,0)


        def getRuleIndex(self):
            return DrawerParser.RULE_nopExpr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNopExpr" ):
                listener.enterNopExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNopExpr" ):
                listener.exitNopExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNopExpr" ):
                return visitor.visitNopExpr(self)
            else:
                return visitor.visitChildren(self)




    def nopExpr(self):

        localctx = DrawerParser.NopExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_nopExpr)
        try:
            self.state = 108
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 104
                self.valueExpr()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 105
                self.wrappedExpr()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 106
                self.funcCallExpr()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 107
                self.sigExpr()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ValueExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def value(self):
            return self.getTypedRuleContext(DrawerParser.ValueContext,0)


        def getRuleIndex(self):
            return DrawerParser.RULE_valueExpr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterValueExpr" ):
                listener.enterValueExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitValueExpr" ):
                listener.exitValueExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitValueExpr" ):
                return visitor.visitValueExpr(self)
            else:
                return visitor.visitChildren(self)




    def valueExpr(self):

        localctx = DrawerParser.ValueExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_valueExpr)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 110
            self.value()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WrappedExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(DrawerParser.ExprContext,0)


        def getRuleIndex(self):
            return DrawerParser.RULE_wrappedExpr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWrappedExpr" ):
                listener.enterWrappedExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWrappedExpr" ):
                listener.exitWrappedExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWrappedExpr" ):
                return visitor.visitWrappedExpr(self)
            else:
                return visitor.visitChildren(self)




    def wrappedExpr(self):

        localctx = DrawerParser.WrappedExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_wrappedExpr)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 112
            self.match(DrawerParser.T__3)
            self.state = 113
            self.expr()
            self.state = 114
            self.match(DrawerParser.T__5)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncCallExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(DrawerParser.ID, 0)

        def expr(self):
            return self.getTypedRuleContext(DrawerParser.ExprContext,0)


        def getRuleIndex(self):
            return DrawerParser.RULE_funcCallExpr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFuncCallExpr" ):
                listener.enterFuncCallExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFuncCallExpr" ):
                listener.exitFuncCallExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncCallExpr" ):
                return visitor.visitFuncCallExpr(self)
            else:
                return visitor.visitChildren(self)




    def funcCallExpr(self):

        localctx = DrawerParser.FuncCallExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_funcCallExpr)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 116
            self.match(DrawerParser.ID)
            self.state = 117
            self.match(DrawerParser.T__3)
            self.state = 118
            self.expr()
            self.state = 119
            self.match(DrawerParser.T__5)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SigExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SIG(self):
            return self.getToken(DrawerParser.SIG, 0)

        def expr(self):
            return self.getTypedRuleContext(DrawerParser.ExprContext,0)


        def getRuleIndex(self):
            return DrawerParser.RULE_sigExpr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSigExpr" ):
                listener.enterSigExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSigExpr" ):
                listener.exitSigExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSigExpr" ):
                return visitor.visitSigExpr(self)
            else:
                return visitor.visitChildren(self)




    def sigExpr(self):

        localctx = DrawerParser.SigExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_sigExpr)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 121
            self.match(DrawerParser.SIG)
            self.state = 122
            self.expr()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Op1ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def op2Expr(self):
            return self.getTypedRuleContext(DrawerParser.Op2ExprContext,0)


        def op1Expr(self):
            return self.getTypedRuleContext(DrawerParser.Op1ExprContext,0)


        def OP1(self):
            return self.getToken(DrawerParser.OP1, 0)

        def getRuleIndex(self):
            return DrawerParser.RULE_op1Expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOp1Expr" ):
                listener.enterOp1Expr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOp1Expr" ):
                listener.exitOp1Expr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOp1Expr" ):
                return visitor.visitOp1Expr(self)
            else:
                return visitor.visitChildren(self)



    def op1Expr(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = DrawerParser.Op1ExprContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 30
        self.enterRecursionRule(localctx, 30, self.RULE_op1Expr, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 125
            self.op2Expr(0)
            self._ctx.stop = self._input.LT(-1)
            self.state = 132
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,5,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = DrawerParser.Op1ExprContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_op1Expr)
                    self.state = 127
                    if not self.precpred(self._ctx, 2):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                    self.state = 128
                    self.match(DrawerParser.OP1)
                    self.state = 129
                    self.op2Expr(0) 
                self.state = 134
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,5,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class Op2ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def nopExpr(self):
            return self.getTypedRuleContext(DrawerParser.NopExprContext,0)


        def op2Expr(self):
            return self.getTypedRuleContext(DrawerParser.Op2ExprContext,0)


        def OP2(self):
            return self.getToken(DrawerParser.OP2, 0)

        def getRuleIndex(self):
            return DrawerParser.RULE_op2Expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOp2Expr" ):
                listener.enterOp2Expr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOp2Expr" ):
                listener.exitOp2Expr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOp2Expr" ):
                return visitor.visitOp2Expr(self)
            else:
                return visitor.visitChildren(self)


